<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/section_bg"
    android:orientation="vertical"
    android:padding="20dp" >
	
    <LinearLayout
        android:id="@+id/layout_yield_per_mu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
         >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:text="@string/yield_per_mu"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/yield_per_mu_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="@dimen/text_size"
             />
		
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/unit_kg"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size" />
    </LinearLayout>
    

	<!-- 种植面积 -->

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center_vertical"
            android:text="@string/plant_area_sum"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/plant_area_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="@dimen/text_size"
             />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/unit_mu"
            android:textSize="@dimen/text_size" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/yield"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/yield_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="@dimen/text_size"
             />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unit_kg"
            android:textSize="@dimen/text_size" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/contract_plant_num"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/contract_yield_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="@dimen/text_size"
             />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unit_kg"
            android:textSize="@dimen/text_size" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/order_yield"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/order_yield_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" 
            android:textSize="@dimen/text_size"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unit_kg"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/export_store_yield"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/export_store_yield_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" 
            android:textSize="@dimen/text_size"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unit_kg"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    

    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
         >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:text="@string/plant_no"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/plant_num_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="@dimen/text_size"
             />
		
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/unit_zhu"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size" />
    </LinearLayout>
</LinearLayout>